# PX4-Detector

./: .gitignore  .gitmodules  README.md  mavlink_message_sample.md
ROMFS/px4fmu_common/init.d/: rc.mc_defaults
ROMFS/px4fmu_common/init.d-posix/: rcS
ROMFS/px4fmu_common/init.d/airframes/: 10016_3dr_iris
Tools/: gazebo_sitl_multiple_run.sh
Tools/UDPtoTCPtunnel/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  udp2tcp
Tools/UDPtoTCPtunnel/include/: ISOCKET_INT.h  MAVLINK.hpp  TCP_CONNECTION.h  TCP_SOCKET.h  UDP_SOCKET.h
Tools/UDPtoTCPtunnel/setup/: setup_udp2tcp.sh  udp2tcp_service.service
Tools/UDPtoTCPtunnel/src/: TCP_CONNECTION.cpp  TCP_SOCKET.cpp  UDP_SOCKET.cpp  main  main.cpp
Tools/setup/: wsl.sh
src/modules/mavlink/: mavlink_main.cpp  mavlink_main.h  mavlink_params.c  mavlink_receiver.cpp  mavlink_timesync.cpp  module.yaml
src/modules/navigator/: navigator_main.cpp
